deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: inlets
  labels:
    app: inlets
spec:
  selector:
    app: inlets
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
